# raytracer-rs

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md
src/: aabb.rs  bvh.rs  camera.rs  hitable.rs  main.rs  material.rs  plane.rs  pyramid.rs  quad.rs  randomutil.rs  ray.rs  raytracer.rs  scene.rs  sphere.rs  teapot.rs  texture.rs  timeutil.rs  triangle.rs
